--- a/style.css
+++ b/style.css
@@ -32,6 +32,13 @@ div.container h3 {
 	margin: 0;
 }
 
+div.container h5 {
+	font-family: Helvetica;
+	font-weight: 100;
+	font-size: 2.3em;
+	margin: 0;
+}
+
 div.circle {
 	margin: auto;
 	width: 200px;
@@ -70,7 +77,7 @@ div.circle:hover {
 div.social-container {
 	margin-top: 30px;
 	color: #FFF;
-	font-size: 47px;
+	font-size: 46px;
 }
 
 div.social-container a {
@@ -83,6 +90,10 @@ div.social-container a {
 
 div.social-container a:hover {
 	color: #00FFC0;
+}
+
+div.wrapper {
+	margin-left: -15px;
 }
 
 video {
